...
                icon = Icons.Filled.PlayArrow,
                onClick = onLoadModelClick
            )

            // Download Preset Model Card
            WelcomeCard(
                title = "Preset model",
                description = "Download a pre-configured model from the cloud.",
                icon = Icons.Filled.CloudDownload,
                onClick = onDownloadModelClick
            )

            // App Settings Card
...
